tests/snapshots/ProcTranslator__tests__tests__simplified_ast@classes.snap
---
source: src/tests.rs
expression: "format!(\"{:#?}\", simple_ast)"
---
AbstractSyntaxTree {
    node: File,
    children: [
        AbstractSyntaxTree {
            node: Class {
                name: "Node",
            },
            children: [
                AbstractSyntaxTree {
                    node: Declaration {
                        typ: Int,
                        name: "counter",
                        expression: Some(
                            Literal {
                                typ: (),
                                value: "5",
                            },
                        ),
                    },
                    children: [],
                },
                AbstractSyntaxTree {
                    node: Callable {
                        result_type: Int,
                        name: "Increment",
                        arguments: [],
                    },
                    children: [
                        AbstractSyntaxTree {
                            node: Return {
                                value: Some(
                                    Increment {
                                        typ: (),
                                        expression: Field {
                                            typ: (),
                                            object: This {
                                                typ: (),
                                            },
                                            name: "counter",
                                        },
                                        postfix: true,
                                    },
                                ),
                            },
                            children: [],
                        },
                    ],
                },
            ],
        },
        AbstractSyntaxTree {
            node: Class {
                name: "App",
            },
            children: [
                AbstractSyntaxTree {
                    node: Callable {
                        result_type: Void,
                        name: "Main",
                        arguments: [],
                    },
                    children: [
                        AbstractSyntaxTree {
                            node: Declaration {
                                typ: Class(
                                    "Node",
                                ),
                                name: "node",
                                expression: Some(
                                    New {
                                        typ: (),
                                        class_name: "Node",
                                    },
                                ),
                            },
                            children: [],
                        },
                        AbstractSyntaxTree {
                            node: Expression {
                                expression: MethodCall {
                                    typ: (),
                                    object: Variable {
                                        typ: (),
                                        name: "node",
                                    },
                                    name: "Increment",
                                    arguments: [],
                                },
                            },
                            children: [],
                        },
                        AbstractSyntaxTree {
                            node: Expression {
                                expression: MethodCall {
                                    typ: (),
                                    object: Variable {
                                        typ: (),
                                        name: "node",
                                    },
                                    name: "Increment",
                                    arguments: [],
                                },
                            },
                            children: [],
                        },
                        AbstractSyntaxTree {
                            node: Return {
                                value: None,
                            },
                            children: [],
                        },
                    ],
                },
            ],
        },
    ],
}
